# agentive-inversion

./: .claude.md  .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DOCKER.md  DOCKER_QUICKREF.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  EMAIL_TRIAGE_INSTRUCTIONS.md  Makefile  QUICKSTART.md  README.md  SPEC.md  dev.sh  diesel.toml  docker-compose.yml  docker-entrypoint-backend.sh  email-poller.toml.example  nginx.conf  seed-data.sql
.claude/: CLAUDE.md
.github/workflows/: ci.yml  container.yml  deploy.yml
backend/: Cargo.toml
backend/src/: config.rs  db.rs  error.rs  main.rs  routes.rs  schema.rs
backend/src/handlers/: health.rs  mod.rs  sources.rs  sync.rs  todos.rs
backend/src/middleware/: mod.rs
crates/backend/: Cargo.toml
crates/backend/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  repository.rs  schema.rs
crates/backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  types.rs
crates/backend/src/pollers/: calendar.rs  email.rs  gmail_client.rs  mod.rs  processor.rs
crates/backend/src/services/: decision.rs  mod.rs
crates/calendar-poller/: Cargo.toml
crates/calendar-poller/src/: calendar_client.rs  main.rs  processor.rs
crates/email-poller/: Cargo.toml
crates/email-poller/src/: calendar_client.rs  config.rs  db.rs  gmail_client.rs  imap_client.rs  lib.rs  main.rs  processor.rs  schema.rs  service.rs
crates/frontend/: Cargo.toml  index.html  styles.css
crates/frontend/src/: main.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: json_wrapper.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  styles.css
frontend/src/: main.rs  router.rs
frontend/src/components/: header.rs  todo_item.rs  todo_list.rs
frontend/src/pages/: home.rs  mod.rs  not_found.rs  settings.rs  sources.rs
frontend/src/services/: api.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/00000000000000_initial_schema/: down.sql  up.sql
migrations/2024-01-01-000001_create_todos/: down.sql  up.sql
migrations/2024-01-02-000001_add_oauth_to_email_accounts/: down.sql
migrations/2024-01-02-000001_add_todo_enhancements/: down.sql  up.sql
migrations/2024-01-02-000002_add_oauth_to_email_accounts/: up.sql
migrations/2025-11-30-214907_change_source_to_varchar/: down.sql  up.sql
migrations/2026-01-18-180220_create_emails/: up.sql
migrations/2026-01-18-181300-0000_create_agent_decisions/: down.sql  up.sql
migrations/2026-01-18-181517_create_agent_decisions/: down.sql  up.sql
migrations/2026-01-18-183141-0000_create_agent_rules/: down.sql  up.sql
migrations/2026-01-18-201129-0000_create_chat_messages/: down.sql  up.sql
migrations/2026-01-18-212112-0000_create_calendar_events/: down.sql  up.sql
migrations/2026-01-18-222424-0000_add_performance_indexes/: down.sql  up.sql
migrations/2026-01-19-044025-0000_create_google_accounts/: down.sql  up.sql
migrations/2026-01-20-203719_drop_email_and_calendar_accounts/: down.sql  up.sql
polling-services/: Cargo.toml
polling-services/src/: config.rs  db.rs  main.rs  scheduler.rs
polling-services/src/calendar/: mod.rs  parser.rs  poller.rs
polling-services/src/gmail/: mod.rs  parser.rs  poller.rs
scripts/: sample_emails.py  top_senders.py  triage-emails.sh  triage_emails.py
shared/: Cargo.toml
shared/src/: api.rs  models.rs
