[workspace]
resolver = "2"
members = [
    "frontend",
    "backend",
    "polling-services",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Agentive Inversion Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
deadpool-diesel = { version = "0.5", features = ["postgres"] }

# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }

# Google APIs
google-gmail1 = "5.0"
google-calendar3 = "5.0"
yup-oauth2 = "8.3"

# Frontend (Yew)
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo = "0.11"
gloo-net = "0.5"

# Utilities
uuid = { version = "1.6", features = ["serde", "v4"] }
dotenv = "0.15"
config = "0.13"
