[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
diesel = { workspace = true }
diesel-async = { workspace = true }
deadpool-diesel = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenv = { workspace = true }
config = { workspace = true }

# OAuth
yup-oauth2 = { workspace = true }
reqwest = { workspace = true }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Crypto
aes-gcm = "0.10"
base64 = "0.21"
