[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Database (for Diesel types)
diesel = { workspace = true }

# Validation
validator = { version = "0.16", features = ["derive"] }

[features]
default = []
