[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types", features = ["diesel"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Database
diesel.workspace = true
diesel-async.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Environment and config
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
