[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types", features = ["diesel"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Database
diesel.workspace = true
diesel-async.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Environment and config
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.24", features = ["json"] }
urlencoding = "2.1.3"
tokio-postgres-rustls = "0.13.0"
rustls = "0.23.35"
webpki-roots = "1.0.4"
futures = "0.3.31"
tokio-postgres = "0.7.15"
clap = { version = "4.5.53", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
