[package]
name = "email-poller"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
tokio.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
anyhow.workspace = true

# Google APIs
google-gmail1 = "6.0.0"
google-calendar3 = "6.0.0"
yup-oauth2 = "12.1.1"
hyper = { version = "1.8.1", features = ["client"] }
hyper-util = { version = "0.1.18", features = ["client-legacy"] }
rustls = { version = "0.23.35", features = ["ring"] }

# Config & Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json.workspace = true
serde.workspace = true
toml = "0.9.8"
notify = "8.2.0"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["rustls-tls", "json"] }
base64 = "0.22.1"
urlencoding = "2.1.3"
chrono-tz = "0.10.4"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
