[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

# Frontend framework
yew.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "Request", "RequestInit", "RequestMode", "Response"] }
gloo.workspace = true
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
